--- a/02.md
+++ b/02.md
@@ -123,10 +123,116 @@ db.observations.mapReduce(
 ```
 
 ## Graph-Like Data Models
+可以建模为graph的数据:算法最短路径,PageRank
+- Social graphs: 社交图
+- The Web graph: 网络图
+- Road or rail network: 路线网络或铁路网络
+
+model:
+- property graph: Neo4j,Titan,InfiniteGraph
+- triple-store: Datomic, AllegroGraph
+language: Cypher~SPARQL~Datalog(declarative), Gremlin(imperative)
+framework: Pregel
 
 ## Property Graphs
+vertex consists of:
+- id
+- 出的边集合
+- 入的边集合
+- 属性值集合
+
+edge consists of:
+- id
+- 边起始点(tail)
+- 边开始点(head)
+- 边的label
+- 边的属性值集合
+
+-- SQL表示vertex和edge
+```sql
+CREATE TABLE vertices (
+                          vertex_id   integer PRIMARY KEY,
+                          properties  json
+);
+CREATE TABLE edges (
+                       edge_id
+                                   integer PRIMARY KEY,
+                       tail_vertex integer REFERENCES vertices (vertex_id),
+                       head_vertex integer REFERENCES vertices (vertex_id),
+                       label
+                                   text,
+                       properties  json
+);
+CREATE INDEX edges_tails ON edges (tail_vertex);
+CREATE INDEX edges_heads ON edges (head_vertex);
+```
+1. 任两vertex都可以用edge相连,没有限制
+2. 任何vertex都有incoming edges和outgoing edges,可以快速遍历vertices集合,无论正向反向
+3. 可以存储不同的信息在graph里,仍然维持干净的数据模型
 
 ## The Cypher Query Language
+```Cypher
+CREATE
+  (NAmerica:Location {name:'North America', type:'continent'}),
+  (USA:Location      {name:'United States', type:'country'  }),
+  (Idaho:Location    {name:'Idaho',         
+type:'state'
+  (Lucy:Person       {name:'Lucy' }),
+  (Idaho) -[:WITHIN]->  (USA)  -[:WITHIN]-> (NAmerica),
+  (Lucy)  -[:BORN_IN]-> (Idaho)
+```
+example: 找出所有从美国移民到欧洲的人(找含有born_in(US)的且含有living_in(EU)的顶点,返回顶点的名称属性)
+cypher:
+    MATCH
+        (person) -[:BORN_IN]->  () -[:WITHIN*0..]-> (us:Location {name:'United States'}),
+        (person) -[:LIVES_IN]-> () -[:WITHIN*0..]-> (eu:Location {name:'Europe'})
+    RETURN person.name
+
+## Graph Queries in SQL
+```sql
+WITH RECURSIVE
+    -- in_usa is the set of vertex IDs of all locations within the United States
+    in_usa(vertex_id) as (
+        select vertex_id from vertices where properties->>'name' = 'United States'
+        union
+            select edges.tail_vertex from edges
+                join in_usa on edges.head_vertex = in_usa.vertex_id
+                where edges.label = 'within'
+    ),
+    -- in_europe is the set of vertex IDs of all locations within Europe
+    in_europe(vertex_id) as (
+        select vertex_id from vertices where properties->>'name' = 'Europe'
+        union
+            select edges.tail_vertex from edges
+                join in_europe on edges.head_vertex = in_europe.vertex_id
+                where edges.label = 'within'
+    ),
+    -- born_in_usa is the set of vertex IDs of all people born in the US
+    born_in_usa(vertex_id) as (
+        select edges.tail_vertex from edges
+            join in_usa on edges.head_vertex = in_usa.vertex_id
+            where edges.label = 'born_in'
+    ),
+    -- born_in_usa is the set of vertex IDs of all people living in Europe
+    lives_in_europe(vertex_id) as (
+        select edges.tail_vertex from edges
+            join in_europe on edges.head_vertex = in_europe.vertex_id
+            where edges.label = 'lives_in'
+    )
+    select vertices.properties->>'name'
+    from vertices
+    -- join to find those people who were both born in the US *and* live in Europe
+    join born_in_usa on vertices.vertex_id = born_in_usa.vertex_id
+    join lives_in_europe on vertices.vertex_id = lives_in_europe.vertex_id;
+```
+1. 找出United States的vertexId,再递归找对应edges(label:with_in,head_vertex:in_usa)中vertexId.
+   这样递归找出了美国的所有地区 in_usa
+2. 同理找出欧洲的所有地区 in_europe
+3. 找edges中label是born_in,且head_vertex是in_usa的
+   找出所有在美国出生的人 born_in_usa
+4. 同理找出所有在欧洲居住的人 lives_in_europe
+5. join born_in_usa, lives_in_europe找出所有在美国出生,欧洲居住的人.即移民到美国的欧洲人
+
 
 ## Graph Queries in SQL
 
