--- a/03.md
+++ b/03.md
@@ -1,2 +1,59 @@
 # Chapter3 Storage and Retrieval
+store and get data
+SQL and NoSQL
 
+Having a rough idea about storage engine is good for you to choose storage engines.
+Transaction Processing VS Analytics
+Column-Oriented Storage
+Log-structured (NoSQL?) vs page-oriented(SQL B-trees)
+
+## Data Structures That Power Your Database
+
+Trade-off in storage system: indexes speed up reads and slow down writes
+
+### Hash Indexes
+Hash Index: key-value, building block for complex indexes
+
+### SSTables and LSM-Trees
+
+### B-Trees
+
+### Comparing B-Trees and LSM-Trees
+
+### Other Indexing Structures
+
+#### Storing values within the index
+
+#### Multi-column indexes
+
+#### Full-text search and fuzzy indexes
+
+#### Keeping everything in memory
+
+## Transaction Processing or Analytics?
+
+## Column-Oriented Storage
+
+## Summary
+how databases handle storage and retrieval
+
+OLTP: optimized for transaction processing
+    end users use key, then engine uses indeces to find data
+    bottleneck: Disk seek time 
+OLAP: optimized for analytics
+    Data warehouses(数仓)
+    bottleneck: Disk bandwidth
+
+two main school for OLTP:
+- log-structured school: only create and delete, no writing
+    turn random-access writes into sequential
+- update-in-place school: CUD, B-trees example
+ 
+indexing structures, and databases that keep all data in memory
+
+OLTP: when scanning across many rows, encoding data compactly are more important than indexes.
+column-oriented storage achieved this goal.
+
+As a developer, the knowledge about internals of storage engines help you find tool better suited.
+
+vocabulary and ideas about database
