--- a/03.md
+++ b/03.md
@@ -14,6 +14,20 @@ Trade-off in storage system: indexes speed up reads and slow down writes
 ### Hash Indexes
 Hash Index: key-value, building block for complex indexes
 
+Real databases need to deal with concurrency control, reclaiming disk space, handling errors, partially written records.
+
+# simplest database
+```bash
+db_set() { echo "$1,$2" >> database }
+db_get() { grep "^$1," database | sed -e "s/^$1,//" | tail -n 1 }
+```
+It writes efficiently(O(1)), but slow to read.(O(n))
+
+Index affects performance instead of primary data.
+Slow down writes and updates, but speeds up reads.
+
+Therefore, you can choose index to speed up reads at the cost of slowing down writes and updates.
+
 ### SSTables and LSM-Trees
 
 ### B-Trees
