--- a/03.md
+++ b/03.md
@@ -16,7 +16,7 @@ Hash Index: key-value, building block for complex indexes
 
 Real databases need to deal with concurrency control, reclaiming disk space, handling errors, partially written records.
 
-# simplest database
+-- simplest database
 ```bash
 db_set() { echo "$1,$2" >> database }
 db_get() { grep "^$1," database | sed -e "s/^$1,//" | tail -n 1 }
@@ -29,6 +29,12 @@ Slow down writes and updates, but speeds up reads.
 Therefore, you can choose index to speed up reads at the cost of slowing down writes and updates.
 
 ### SSTables and LSM-Trees
+
+#### Constructing and maintaining SSTables
+
+#### Making an LSM-Tree out of SSTables
+
+#### Performance optimizations
 
 ### B-Trees
 
