--- a/03.md
+++ b/03.md
@@ -59,7 +59,7 @@ Limitations:
 
 :wusd
 Hash Index: keep data's position in memory.
-    - Compaction and Merge: merge old segments into one, then delete old segments.
+    - Compaction(throw away duplicate key) and Merge: merge old segments into one, then delete old segments.
     - Lookup: first check the most-recent segments then the second-recent segments.
     - Issues and solutions: 
         + File format(binary)
@@ -130,20 +130,122 @@ LSM-Trees(architecture): Log-Structured Merge-Trees
     - optimizations: Bloom filter, size tiered compaction(small to big), leveled compaction(messy papers to ordered cabinets)
 
 ### B-Trees
+B-Tree is most widely used.
+
+Key-value sorted by key, which allows efficient key-value lookups and range queries.
+
+B-trees have fixed-size blocks or pages(4KB), read or write one page at a time, corresponding to disks which are arranged in fixed-size blocks.
+
+Root page contains several keys and references to child pages which also have continuous keys and references.
+
+Leaf page contains value or references to the pages where values can be found.
+
+The branching factor: the number of references to child pages.(typically several hundred)
+
+update: find the leaf page, change the value in that page, and write the page back to disk.
+add: find the page whose range encompasses, add it to that page.
+    If space is not enough, split into two half-full pages, and parent page is updated.
+
+Balanced: O(logn), four-level of 4KB pages, 500 factor, 256TB.
+
+#### Making B-trees reliable
+The overwrite of B-tree doesn't change location of page. LSM-trees, append to files.
+
+When splitting up page, if it runs into crash, the child page may be an orphan.
+    So there's a write-ahead log(appending only) to restore B-tree.
+
+#### B-tree optimizations
+Optimizations:
+    - Instead of WAL, copy-on-write scheme: LeafPage(New), Parent(New), Root(New)
+    - Abbreviating key which only need to provide enough information of ranges.
+    - Keep them sequential on disk. It's not easy for B-tree, but easy for LSM-trees.
+    - leaf page have references to its sibling pages, no need to jump back to parent pages.
+    - B-tree variants like log-structured.
+
 
 ### Comparing B-Trees and LSM-Trees
+B-Trees is faster for reads, LSM-Trees for writes.
+
+However, you have to test them with your particular workload.
+
+#### Advantages of LSM-trees
+B-tree index must write twice,(WAL and itself).
+
+Log-structured indexes rewrite data many times because of compaction and merge.(write amplification)
+
+The performance bottleneck of write-heavy can be the rate of disk.
+
+LSM-trees typically has higher throughput than B-trees, partly because of lower write amplification,
+partly because write sequentially rather than overwriting several pages in the tree.
+
+LSM-tree can be compressed better, compaction and merge remove fragmentation.
+So they have lower storage overheads than B-trees.
+
+--
+
+#### Downsides of LSM-trees
+The compaction process can interfere with ongoing reads and writes, 
+    throughput and average response time is usually good, but sometime the response time can be quite high.
+
+At high write throughput, disk's write bandwidth is shared between initial write and compaction threads.
+
+The compaction cannot keep up with the rate of writes, unmerged segments increase, and disk is used up.
+Reads slow down because of more segment files.
+
+Because each key in B-trees in exactly one place, we can lock up the key directly so that transaction is easy. 
 
 ### Other Indexing Structures
+primary key, secondary indexes, key-value index
+
+A primary key identifies one row, or one document, or one vertex.(like ID in SQL)
+
+Secondary indexes is often not unique(like Index In SQL).
+A key with a posting list in a full-text index, or appending a row identifier to it.
 
 #### Storing values within the index
+Index: key+value, key+references(refer to heap file, it's common because of duplication).
+
+Updating heap file, when it doesn't change location, just update it.
+When it changes location, needs to change all references in indexes.
+
+Clustered index(storing all row data within the index) doesn't need to change location.
+
+A compromise between clustered index and a nonclustered index.(Cover index)
 
 #### Multi-column indexes
+A concatenated index like phone book, (lastname, firstname, phone).
+However, it's useless if you want to find all the people with a firstname.
+
+Multi-dimensional indexes(R-trees), translate a two-dimensional location into a single number then B-trees.
+```sql
+SELECT * FROM restaurants WHERE latitude > 51.4946 AND latitude < 51.5079
+    AND longitude > -0.1162 AND longitude < -0.1004;
+```
+More examples: (red, green, blue) for color, (date, temperature) for a day.
 
 #### Full-text search and fuzzy indexes
+Search for similar keys, misspelled words.
 
 #### Keeping everything in memory
+Keep data in memory in several machines.
+
+Battery-powered RAM write changes to disk, periodic snapshots to disk, replicating state to other machines.
+
+Its performance advantage is not due to the fact that it doesn't need to read from disk.
+Rather, they can avoid encoding in-memory data structures in a form that can be written to disk.
+
+In-memory indexes are easier than disk-based indexes.
+
+In-memory database architecture could support datasets larger than the available memory.(Anti-caching)
+Evicting least recently used data from memory to disk, loading it back in memory when it's accessed again.
+
+Non-volatile memory.
 
 ## Transaction Processing or Analytics?
+
+### Data Warehousing
+
+### Stars and Snowflakes: Schemas for Analytics
 
 ## Column-Oriented Storage
 
