--- a/03.md
+++ b/03.md
@@ -242,10 +242,37 @@ Evicting least recently used data from memory to disk, loading it back in memory
 Non-volatile memory.
 
 ## Transaction Processing or Analytics?
+Transaction refers to a group of reads and writes that form a logical unit.
+
+Because applications are interactive, the access pattern is known as online transaction processing(OLTP).
+
+Online analytic processing(OLAP).
+Analytic queries:
+    - total revenue
+    - more bananas we sell during the promotion
+    - Which band of baby food is most often purchased
+
+Stop using OLTP systems for analytics purposes, but use a data warehouse to analysis.
 
 ### Data Warehousing
 
+Data warehouse extract, and transform data from many DBs of OLTP systems, like Sales DB, Inventory DB, Geo DB.
+
+#### The divergence between OLTP databases and data warehouses
+Although OLTP and OLAP both have a SQL query interface, the internals of the systems are optimized for different query patterns.
+
 ### Stars and Snowflakes: Schemas for Analytics
+star schema(dimensional modeling): 
+    the fact table is in the middle, surrounded by its dimension tables, the connections are like the rays of a star.
+
+Fact table, each row of that represents an event, like a customer's purchase of a product.
+Which can be very large.
+
+Holidays and non-holidays.
+
+
+Snowflake schema, which dimensions are further broken down into subdimensions.
+
 
 ## Column-Oriented Storage
 
